--- a/work/IIP_202.html
+++ b/work/IIP_202.html
@@ -467,7 +467,7 @@
                             </table>
                         </div>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
@@ -571,7 +571,7 @@
                             </table>
                         </div>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
