--- a/work/IIP_205.html
+++ b/work/IIP_205.html
@@ -474,7 +474,7 @@
                             </table>
                         </div>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
@@ -630,7 +630,7 @@
                             </table>
                         </div>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
@@ -776,7 +776,7 @@
                             </table>
                         </div>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
