--- a/work/IIP_800.html
+++ b/work/IIP_800.html
@@ -472,11 +472,6 @@
                 <div class="info-area">
                     <div class="top-info-group">
                         <p class="top-info-group-data">총 <strong>19</strong>건</p>
-                        <select id="select-view">
-                            <option value="1">10건 보기</option>
-                            <option value="2">20건 보기</option>
-                            <option value="3">30건 보기</option>
-                        </select>
                     </div>
                     <div class="com-view-table table-scroll">
                         <table class="mg-0" style="--minwidth: 1464px">
@@ -571,7 +566,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
@@ -610,6 +605,11 @@
             popup.moveTo(left, top)
         }
     }
+
+    
+
+
+
     </script>
 </body>
 </html>
