--- a/work/ILP_030.html
+++ b/work/ILP_030.html
@@ -565,7 +565,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <!-- <button>2</button>
