--- a/work/LIP_500.html
+++ b/work/LIP_500.html
@@ -76,76 +76,162 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">평생교육이용권</span>
-                <span class="arrow">수기 공모 신청</span>
+                <span class="arrow">게시판</span>
+                <span class="arrow">이용권 선정결과</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">수기 공모 신청</h2>
+            <h2 class="page-header-tit">이용권 선정결과</h2>
         </div>
-        <div class="contents contest">
+        <div class="contents ticket-result">
             <div class="top-info-group">
-                <p class="top-info-group-data">총 <strong>5</strong>건</p>
-                <button type="button" class="btns bg-blue">우수사례공모 신청 등록</button>
+                <h3>선정결과</h3>
             </div>
-            <div class="com-view-table">
-                <table class="lg-only">
-                    <caption>수기 공모 신청 테이블</caption>
+            <div class="border-box02">
+                <p class="txt">
+                    <strong class="name color-primary">홍길동</strong>님께서는 <strong>2024년도 01차 서울특별시 지역특화 이용권</strong>에 선정되셨습니다.
+                </p>
+            </div>
+            <p class="asterisk">※ 결과통지방법 : 문자메시지(SMS)</p>
+            <div class="top-info-group">
+                <h3>신청정보</h3>
+            </div>
+            <div class="com-write-table">
+                <table class="basic-info lg-only">
+                    <caption>이용권 선정결과 테이블</caption>
                     <colgroup>
-                        <col style="width: 12%;">                        
-                        <col style="width: 15%;">
-                        <col style="width: 15%;">
-                        <col style="width: 15%;">
+                        <col style="width: 200px;">
+                        <col>
+                        <col style="width: 200px;">
                         <col>
                     </colgroup>
-                    <thead>
-                        <tr>
-                            <th>신청일자</th>
-                            <th>성명</th>
-                            <th>생년월일</th>
-                            <th>연락처</th>
-                            <th>처리상태</th>
-                        </tr>
-                    </thead>
                     <tbody>
                         <tr>
-                            <td>2024-01-01</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <th class="txt-l">신청서 구분</th>
+                            <td>서울이용권(23/03/23)</td>
+                            <th class="txt-l">접수번호</th>
+                            <td>230100062</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">신청연도</th>
+                            <td>2024년</td>
+                            <th class="txt-l">신청 차수</th>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">이름(국문)</th>
+                            <td colspan="3">홍길동</td>                                    
+                        </tr>
+                        <tr>
+                            <th class="txt-l">주민등록번호</th>
+                            <td>860611-1******</td>
+                            <th class="txt-l">대상 유형</th>
+                            <td>기초생활수급자 <span class="color-blue02">(자격)</span></td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">주소</th>
+                            <td colspan="3">(04520) 서울특별시 중구 청계천로 14 7층</td>                                    
+                        </tr>
+                        <tr>
+                            <th class="txt-l">휴대전화번호</th>
+                            <td colspan="3">010-0000-0000</td>                                    
+                        </tr>
+                        <tr>
+                            <th class="txt-l">전자우편주소</th>
+                            <td colspan="3"><a href="mailto:qwer!1234@naver.com">qwer!1234@naver.com</a></td>                                    
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="basic-info sm-show-800">
+                    <caption>이용권 선정결과 테이블</caption>
+                    <colgroup>
+                        <col style="width: 200px;">
+                        <col>
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th class="txt-l">신청서 구분</th>
+                            <td>서울이용권(23/03/23)</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">접수번호</th>
+                            <td>230100062</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">신청연도</th>
+                            <td>2024년</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">신청 차수</th>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">이름(국문)</th>
+                            <td>홍길동</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">주민등록번호</th>
+                            <td>860611-1******</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">대상 유형</th>
+                            <td>기초생활수급자 (자격)</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">주소</th>
+                            <td>(04520) 서울특별시 중구 청계천로 14 7층</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">휴대전화번호</th>
+                            <td>010-0000-0000</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">전자우편주소</th>
+                            <td><a href="mailto:qwer!1234@naver.com">qwer!1234@naver.com</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <ul class="sm-show-800">
-                <li>
-                    <strong>신청일자 :</strong>
-                    <p>2024-01-01</p>
-                </li>
-                <li>
-                    <strong>이름 :</strong>
-                    <p>홍길동</p>
-                </li>
-                <li>
-                    <strong>생년월일 :</strong>
-                    <p>2024-01-01</p>
-                </li>
-                <li>
-                    <strong>연락처 :</strong>
-                    <p>010-1234-5678</p>
-                </li>
-                <li>
-                    <strong>처리상태 :</strong>
-                    <p>처리중</p>
-                </li>
-            </ul>
-            <div class="paging">
-                <button class="prev">이전</button>
-                <button class="on">1</button>
-                <button class="next">다음</button>
+            <div class="top-info-group">
+                <h3>평생학습계좌 연계</h3>
+            </div>
+            <div class="com-write-table">
+                <table class="basic-info">
+                    <caption>평생학습계좌 연계 동의서 테이블</caption>
+                    <colgroup>
+                        <col style="min-width:245px;width:50%;">
+                        <col>
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th class="txt-l">평생학습계좌에 평생교육방처 사용 결과를 등록하시겠습니까?</th>
+                            <td>아니오</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="top-info-group">
+                <h3>준수사항 안내 확인 동의서</h3>
+            </div>
+            <div class="com-write-table">
+                <table class="basic-info">
+                    <caption>준수사항 안내 확인 동의서 테이블</caption>
+                    <colgroup>
+                        <col style="min-width:245px;width:50%;">
+                        <col>
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th class="txt-l">평생교육이용권 이용자 준수사항 안내 확인 동의서에 동의하시겠습니까?</th>
+                            <td>예</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="btns-bottom">
+                <button type="button" class="btns">메인으로</button>
             </div>
         </div>
     </div>
@@ -285,7 +371,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="paging">
+                    <div class="com-paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
