--- a/work/LNP_300.html
+++ b/work/LNP_300.html
@@ -248,7 +248,7 @@
                                 <li><strong>작성일 :</strong> 2024-10-02</li>
                             </ul>
                         </div>
-                        <div class="com-paging">
+                        <div class="paging">
                             <button class="prev">이전</button>
                             <button class="on">1</button>
                             <button>2</button>
@@ -358,7 +358,7 @@
                                 <li><strong>처리상태 :</strong> 완료</li>
                             </ul>
                         </div>
-                        <div class="com-paging">
+                        <div class="paging">
                             <button class="prev">이전</button>
                             <button class="on">1</button>
                             <button>2</button>
