--- a/work/IIP_203.html
+++ b/work/IIP_203.html
@@ -484,7 +484,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
@@ -567,7 +567,7 @@
                             </table>
                         </div>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
@@ -721,7 +721,7 @@
                             </table>
                         </div>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
