--- a/work/IIP_204.html
+++ b/work/IIP_204.html
@@ -466,7 +466,7 @@
                             </table>
                         </div>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
@@ -573,7 +573,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
@@ -719,7 +719,7 @@
                             </table>
                         </div>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
