--- a/work/IIP_300.html
+++ b/work/IIP_300.html
@@ -175,7 +175,7 @@
             </div>
             <!-- .// vertical table -->
             <!-- pagination -->
-            <div class="com-paging">
+            <div class="paging">
                 <button class="prev">이전</button>
                 <button class="on">1</button>
                 <button>2</button>
