--- a/work/IIP_500.html
+++ b/work/IIP_500.html
@@ -228,7 +228,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="com-paging">
+                        <div class="paging">
                             <button class="prev">이전</button>
                             <button class="on">1</button>
                             <button>2</button>
@@ -378,7 +378,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="com-paging">
+                        <div class="paging">
                             <button class="prev">이전</button>
                             <button class="on">1</button>
                             <button>2</button>
