--- a/work/INP_200.html
+++ b/work/INP_200.html
@@ -187,7 +187,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="com-paging">
+                        <div class="paging">
                             <button class="prev">이전</button>
                             <button class="on">1</button>
                             <button>2</button>
@@ -336,7 +336,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="com-paging">
+                        <div class="paging">
                             <button class="prev">이전</button>
                             <button class="on">1</button>
                             <button>2</button>
