--- a/work/LAP_200.html
+++ b/work/LAP_200.html
@@ -155,7 +155,7 @@
                     <p>-</p>
                 </li>
             </ul>
-            <div class="com-paging">
+            <div class="paging">
                 <button class="prev">이전</button>
                 <button class="on">1</button>
                 <button class="next">다음</button>
