--- a/work/LAP_401.html
+++ b/work/LAP_401.html
@@ -227,7 +227,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="com-paging">
+            <div class="paging">
                 <button class="prev">이전</button>
                 <button class="on">1</button>
                 <button class="next">다음</button>
@@ -370,7 +370,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="com-paging">
+                    <div class="paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
