--- a/work/LIP_200.html
+++ b/work/LIP_200.html
@@ -76,76 +76,239 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">평생교육이용권</span>
-                <span class="arrow">수기 공모 신청</span>
+                <span class="arrow">게시판</span>
+                <span class="arrow">마이페이지</span>
+                <span class="arrow">평생교육이용권 이용 내역</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">수기 공모 신청</h2>
+            <h2 class="page-header-tit">평생교육이용권 이용 내역</h2>
         </div>
-        <div class="contents contest">
-            <div class="top-info-group">
-                <p class="top-info-group-data">총 <strong>5</strong>건</p>
-                <button type="button" class="btns bg-blue">우수사례공모 신청 등록</button>
+        <div class="contents cs-center">
+            <div class="search-box ticket-use-history">
+                <form>
+                    <fieldset>
+                        <legend>평생교육이용권 이용 내역 검색영역</legend>
+                        <div class="search-list r-btn">
+                            <dl>
+                                <dt><label for="srch01">사업년도</label></dt>
+                                <dd>
+                                    <select name="" id="srch01">
+                                        <option value="">2024</option>
+                                    </select>
+                                </dd>                    
+                            </dl>
+                            <button type="submit" class="btns">검색하기</button>
+                        </div>
+                        
+                    </fieldset>
+                </form> 
             </div>
-            <div class="com-view-table">
-                <table class="lg-only">
-                    <caption>수기 공모 신청 테이블</caption>
+            <div class="top-info-group">
+                <h3>잔액 정보</h3>
+                <button type="button" class="btns bg-blue w-auto">카드정보 확인</button>
+            </div>
+            <div class="com-view-table lg-only">
+                <table>
+                    <caption>잔액 정보 테이블</caption>
                     <colgroup>
-                        <col style="width: 12%;">                        
-                        <col style="width: 15%;">
-                        <col style="width: 15%;">
-                        <col style="width: 15%;">
+                        <col style="width: 200px;">
+                        <col>
+                        <col style="width: 200px;">
                         <col>
                     </colgroup>
-                    <thead>
-                        <tr>
-                            <th>신청일자</th>
-                            <th>성명</th>
-                            <th>생년월일</th>
-                            <th>연락처</th>
-                            <th>처리상태</th>
-                        </tr>
-                    </thead>
                     <tbody>
                         <tr>
-                            <td>2024-01-01</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <th>카드번호</th>
+                            <td>9007-****-****-9917</td>
+                            <th>한도상태</th>
+                            <td>한도삭제 (국가이용권)</td>
+                        </tr>
+                        <tr>
+                            <th>사용시작일</th>
+                            <td>2023.03.09</td>
+                            <th>사용 종료일</th>
+                            <td>2023.12.31</td>
+                        </tr>
+                        <tr>
+                            <th>한도금액</th>
+                            <td>0원</td>
+                            <th>잔액</th>
+                            <td>0원</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <ul class="sm-show-800">
-                <li>
-                    <strong>신청일자 :</strong>
-                    <p>2024-01-01</p>
-                </li>
-                <li>
-                    <strong>이름 :</strong>
-                    <p>홍길동</p>
-                </li>
-                <li>
-                    <strong>생년월일 :</strong>
-                    <p>2024-01-01</p>
-                </li>
-                <li>
-                    <strong>연락처 :</strong>
-                    <p>010-1234-5678</p>
-                </li>
-                <li>
-                    <strong>처리상태 :</strong>
-                    <p>처리중</p>
-                </li>
-            </ul>
-            <div class="paging">
-                <button class="prev">이전</button>
-                <button class="on">1</button>
-                <button class="next">다음</button>
+            <div class="table-list sm-show-800">
+                <ul>
+                    <li>
+                        <a href="#" class="com-view-title"><strong>사용기관명 : 유비온원격평생교육시설</strong></a>
+                    </li>
+                    <li><strong>강좌명 :</strong> 가족관계론</li>
+                    <li><strong>강좌기간 :</strong> 2022.03.01~2024.12.31</li>
+                    <li><strong>출석/일수/시간/회차 :</strong> 1일</li>
+                    <li><strong>이수여부 :</strong> 이수</li>
+                    <li><strong>계좌제연계 :</strong> 전송대기</li>
+                    <li><strong>승인번호 :</strong> 72344234</li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#" class="com-view-title"><strong>사용기관명 : 유비온원격평생교육시설</strong></a>
+                    </li>
+                    <li><strong>강좌명 :</strong> 중국어회화 전 강좌 패키지[180일](교재 포함)(23년 7월)</li>
+                    <li><strong>강좌기간 :</strong> 2022.03.01~2024.12.31</li>
+                    <li><strong>출석/일수/시간/회차 :</strong> 1일</li>
+                    <li><strong>이수여부 :</strong> 이수</li>
+                    <li><strong>계좌제연계 :</strong> 전송대기</li>
+                    <li><strong>승인번호 :</strong> 72344234</li>
+                </ul>
+            </div>
+            <p class="asterisk">※ 평생교육이용권 카드 재발급 문의 : NH농협 ☎<a href="tel:1644-4000">1644-4000</a> / NH농협카드 홈페이지(<a href="http://card.nonghyup.com" target="_blank">card.nonghyup.com</a>)로 해주시기 바랍니다.</p>
+            <div class="top-info-group">
+                <h3>사용 내역</h3>
+            </div>
+            <div class="com-view-table lg-only">
+                <table>
+                    <caption>사용 내역 테이블</caption>
+                    <colgroup>
+                        <col style="width: 230px;">
+                        <col style="width: 140px;">
+                        <col style="width: 140px;">
+                        <col style="width: 140px;">
+                        <col>
+                        <col style="width: 140px;">
+                        <col style="width: 140px;">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>카드번호</th>
+                            <th>승인일자</th>
+                            <th>승인시각</th>
+                            <th>승인번호</th>
+                            <th>가맹점명</th>
+                            <th>처리구분</th>
+                            <th>승인금액</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>9007-****-****-9917</td>
+                            <td>2023.09.07</td>
+                            <td>16:20:00</td>
+                            <td>77770009</td>
+                            <td class="txt-l">배치</td>
+                            <td>부분 매입취소</td>
+                            <td class="txt-r">20,000원</td>
+                        </tr>
+                        <tr>
+                            <td>9007-****-****-9917</td>
+                            <td>2023.09.07</td>
+                            <td>16:20:00</td>
+                            <td>77770009</td>
+                            <td class="txt-l">배치</td>
+                            <td>부분 매입취소</td>
+                            <td class="txt-r">20,000원</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="table-list sm-show-800">
+                <ul>
+                    <li>
+                        <a href="#" class="com-view-title"><strong>사용기관명 : 유비온원격평생교육시설</strong></a>
+                    </li>
+                    <li><strong>강좌명 :</strong> 가족관계론</li>
+                    <li><strong>강좌기간 :</strong> 2022.03.01~2024.12.31</li>
+                    <li><strong>출석/일수/시간/회차 :</strong> 1일</li>
+                    <li><strong>이수여부 :</strong> 이수</li>
+                    <li><strong>계좌제연계 :</strong> 전송대기</li>
+                    <li><strong>승인번호 :</strong> 72344234</li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#" class="com-view-title"><strong>사용기관명 : 유비온원격평생교육시설</strong></a>
+                    </li>
+                    <li><strong>강좌명 :</strong> 중국어회화 전 강좌 패키지[180일](교재 포함)(23년 7월)</li>
+                    <li><strong>강좌기간 :</strong> 2022.03.01~2024.12.31</li>
+                    <li><strong>출석/일수/시간/회차 :</strong> 1일</li>
+                    <li><strong>이수여부 :</strong> 이수</li>
+                    <li><strong>계좌제연계 :</strong> 전송대기</li>
+                    <li><strong>승인번호 :</strong> 72344234</li>
+                </ul>
+            </div>
+            <div class="top-info-group">
+                <h3>수강 내역</h3>
+            </div>
+            <div class="com-view-table lg-only">
+                <table>
+                    <caption>수강 내역 테이블</caption>
+                    <colgroup>
+                        <col style="width: 230px;">
+                        <col>
+                        <col style="width: 140px;">
+                        <col style="width: 140px;">
+                        <col style="width: 140px;">
+                        <col style="width: 140px;">
+                        <col style="width: 140px;">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>사용기관명</th>
+                            <th>강좌명</th>
+                            <th>강좌기간</th>
+                            <th>출석<br>일수/시간/회차</th>
+                            <th>이수여부</th>
+                            <th>계좌제연계</th>
+                            <th>승인번호</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>유비온원격평생교육시설</td>
+                            <td>가족관계론</td>
+                            <td>2022.03.01~2024.12.31</td>
+                            <td>1일</td>
+                            <td>이수</td>
+                            <td>전송대기</td>
+                            <td>72188699</td>
+                        </tr>
+                        <tr>
+                            <td>유비온원격평생교육시설</td>
+                            <td>가족관계론</td>
+                            <td>2022.03.01~2024.12.31</td>
+                            <td>1일</td>
+                            <td>이수</td>
+                            <td>전송대기</td>
+                            <td>72188699</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="table-list sm-show-800">
+                <ul>
+                    <li>
+                        <a href="#" class="com-view-title"><strong>사용기관명 : 유비온원격평생교육시설</strong></a>
+                    </li>
+                    <li><strong>강좌명 :</strong> 가족관계론</li>
+                    <li><strong>강좌기간 :</strong> 2022.03.01~2024.12.31</li>
+                    <li><strong>출석/일수/시간/회차 :</strong> 1일</li>
+                    <li><strong>이수여부 :</strong> 이수</li>
+                    <li><strong>계좌제연계 :</strong> 전송대기</li>
+                    <li><strong>승인번호 :</strong> 72344234</li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#" class="com-view-title"><strong>사용기관명 : 유비온원격평생교육시설</strong></a>
+                    </li>
+                    <li><strong>강좌명 :</strong> 중국어회화 전 강좌 패키지[180일](교재 포함)(23년 7월)</li>
+                    <li><strong>강좌기간 :</strong> 2022.03.01~2024.12.31</li>
+                    <li><strong>출석/일수/시간/회차 :</strong> 1일</li>
+                    <li><strong>이수여부 :</strong> 이수</li>
+                    <li><strong>계좌제연계 :</strong> 전송대기</li>
+                    <li><strong>승인번호 :</strong> 72344234</li>
+                </ul>
             </div>
         </div>
     </div>
@@ -285,7 +448,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="paging">
+                    <div class="com-paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
