--- a/work/LIP_300.html
+++ b/work/LIP_300.html
@@ -76,73 +76,124 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">평생교육이용권</span>
-                <span class="arrow">수기 공모 신청</span>
+                <span class="arrow">게시판</span>
+                <span class="arrow">마이페이지</span>
+                <span class="arrow">교육이수정보</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">수기 공모 신청</h2>
+            <h2 class="page-header-tit">교육 이수 정보</h2>
         </div>
-        <div class="contents contest">
-            <div class="top-info-group">
-                <p class="top-info-group-data">총 <strong>5</strong>건</p>
-                <button type="button" class="btns bg-blue">우수사례공모 신청 등록</button>
+        <div class="contents cs-center">
+            <div class="search-box">
+                <form>
+                    <fieldset>
+                        <legend>교육 이수 정보 검색영역</legend>
+                        <div class="search-list">
+                            <dl>
+                                <dt><label for="srch01">사업년도</label></dt>
+                                <dd>
+                                    <select name="" id="srch01">
+                                        <option value="">2024</option>
+                                    </select>
+                                </dd>                    
+                            </dl>
+                            <dl>
+                                <dt><label for="srch02">차수</label></dt>
+                                <dd>
+                                    <select name="" id="srch02">
+                                        <option value="">1</option>
+                                    </select>
+                                </dd>                    
+                            </dl>
+                        </div>
+                        <button type="submit" class="btns">검색</button>
+                    </fieldset>
+                </form> 
             </div>
-            <div class="com-view-table">
-                <table class="lg-only">
-                    <caption>수기 공모 신청 테이블</caption>
+            <div class="top-info-group">
+                <p class="top-info-group-data">총 <strong>2</strong>건</p>
+            </div>
+            <div class="com-view-table lg-only">
+                <table>
+                    <caption>교육 이수 정보 테이블</caption>
                     <colgroup>
-                        <col style="width: 12%;">                        
-                        <col style="width: 15%;">
-                        <col style="width: 15%;">
-                        <col style="width: 15%;">
+                        <col style="width: 100px;">
+                        <col style="width: 80px;">
+                        <col style="width: 150px;">
                         <col>
+                        <col style="width: 140px;">
+                        <col style="width: 120px;">
+                        <col style="width: 100px;">
+                        <col style="width: 120px;">
+                        <col style="width: 120px;">
                     </colgroup>
                     <thead>
                         <tr>
-                            <th>신청일자</th>
-                            <th>성명</th>
-                            <th>생년월일</th>
-                            <th>연락처</th>
-                            <th>처리상태</th>
+                            <th>사업년도</th>
+                            <th>차수</th>
+                            <th>사용기관명</th>
+                            <th>강좌명</th>
+                            <th>강좌기간</th>
+                            <th>출석<br>일수/시간/회차</th>
+                            <th>이수여부</th>
+                            <th>계좌제연계</th>
+                            <th>승인번호</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>2024-01-01</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <td>2024</td>
+                            <td>1</td>
+                            <td>유비온원격평생교육시설</td>
+                            <td>가족관계론</td>
+                            <td>2022.03.01~2024.12.31</td>
+                            <td>1일</td>
+                            <td>이수</td>
+                            <td>전송대기</td>
+                            <td>72188699</td>
+                        </tr>
+                        <tr>
+                            <td>2024</td>
+                            <td>2</td>
+                            <td>유비온원격평생교육시설</td>
+                            <td>중국어회화 전 강좌 패키지[180일](교재 포함)(23년 7월)</td>
+                            <td>2022.03.01~2024.12.31</td>
+                            <td>1일</td>
+                            <td>이수</td>
+                            <td>전송대기</td>
+                            <td>77770003</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <ul class="sm-show-800">
-                <li>
-                    <strong>신청일자 :</strong>
-                    <p>2024-01-01</p>
-                </li>
-                <li>
-                    <strong>이름 :</strong>
-                    <p>홍길동</p>
-                </li>
-                <li>
-                    <strong>생년월일 :</strong>
-                    <p>2024-01-01</p>
-                </li>
-                <li>
-                    <strong>연락처 :</strong>
-                    <p>010-1234-5678</p>
-                </li>
-                <li>
-                    <strong>처리상태 :</strong>
-                    <p>처리중</p>
-                </li>
-            </ul>
-            <div class="paging">
+            <div class="table-list sm-show-800">
+                <ul>
+                    <li>
+                        <a href="#" class="com-view-title"><strong>사용기관명 : 유비온원격평생교육시설</strong></a>
+                    </li>
+                    <li><strong>강좌명 :</strong> 가족관계론</li>
+                    <li><strong>강좌기간 :</strong> 2022.03.01~2024.12.31</li>
+                    <li><strong>출석/일수/시간/회차 :</strong> 1일</li>
+                    <li><strong>이수여부 :</strong> 이수</li>
+                    <li><strong>계좌제연계 :</strong> 전송대기</li>
+                    <li><strong>승인번호 :</strong> 72344234</li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#" class="com-view-title"><strong>사용기관명 : 유비온원격평생교육시설</strong></a>
+                    </li>
+                    <li><strong>강좌명 :</strong> 중국어회화 전 강좌 패키지[180일](교재 포함)(23년 7월)</li>
+                    <li><strong>강좌기간 :</strong> 2022.03.01~2024.12.31</li>
+                    <li><strong>출석/일수/시간/회차 :</strong> 1일</li>
+                    <li><strong>이수여부 :</strong> 이수</li>
+                    <li><strong>계좌제연계 :</strong> 전송대기</li>
+                    <li><strong>승인번호 :</strong> 72344234</li>
+                </ul>
+            </div>
+            <div class="com-paging">
                 <button class="prev">이전</button>
                 <button class="on">1</button>
                 <button class="next">다음</button>
@@ -285,7 +336,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="paging">
+                    <div class="com-paging">
                         <button class="prev">이전</button>
                         <button class="on">1</button>
                         <button>2</button>
