--- a/work/LMP_001.html
+++ b/work/LMP_001.html
@@ -397,7 +397,7 @@
                 </div>
             </div>
         </div>
-        <div class="com-paging">
+        <div class="paging">
             <button class="prev">이전</button>
             <button class="on">1</button>
             <button>2</button>
