--- a/work/LNP_001_old.html
+++ b/work/LNP_001_old.html
@@ -197,7 +197,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="com-paging">
+            <div class="paging">
                 <button class="prev">이전</button>
                 <button class="on">1</button>
                 <button>2</button>
