--- a/work/LNP_100.html
+++ b/work/LNP_100.html
@@ -241,7 +241,7 @@
                     <li><strong>작성일 :</strong> 2024-10-02</li>
                 </ul>
             </div>
-            <div class="com-paging">
+            <div class="paging">
                 <button class="prev">이전</button>
                 <button class="on">1</button>
                 <button>2</button>
