--- a/work/LNP_200_old.html
+++ b/work/LNP_200_old.html
@@ -210,7 +210,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="com-paging">
+                        <div class="paging">
                             <button class="prev">이전</button>
                             <button class="on">1</button>
                             <button>2</button>
@@ -323,7 +323,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="com-paging">
+                        <div class="paging">
                             <button class="prev">이전</button>
                             <button class="on">1</button>
                             <button>2</button>
