--- a/work/LUP_001.html
+++ b/work/LUP_001.html
@@ -301,7 +301,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="com-paging">
+            <div class="paging">
                 <button class="prev">이전</button>
                 <button class="on">1</button>
                 <button>2</button>
