--- a/work/index.html
+++ b/work/index.html
@@ -124,7 +124,8 @@
           <td>
             12.04 : woff, woff2 폰트 형식 추가 <br>
             12.06 : 제이쿼리 1.8.2 min.js 변경 <br>
-            12.11 : 팝업 열릴 시 스크롤 막기, 닫기 시 스크롤 추가 구현
+            12.11 : 팝업 열릴 시 스크롤 막기, 닫기 시 스크롤 추가 구현 <br>
+            01.03 : 페이징 구조 변경 (관리자 개발 이슈)
           </td>
         </tr>
         <tr class="line done main">
@@ -852,11 +853,40 @@
         </tr>
         <tr class="line done l">
           <th>평생교육이용권</th>
+          <td>이용권 지자체_마이페이지_평생교육이용권 이용 내역</td>
+          <td>page</td>
+          <td><a href="./LIP_200.html">LIP_200.html</a></td>
+          <td class="ac">O</td>
+          <td>01.03 : 1차 퍼블리싱 완료</td>
+        </tr>
+        <tr class="line done l">
+            <th>평생교육이용권</th>
+            <td>이용권 지자체_마이페이지_교육이수정보</td>
+            <td>page</td>
+            <td><a href="./LIP_300.html">LIP_300.html</a></td>
+            <td class="ac">O</td>
+            <td>01.03 : 1차 퍼블리싱 완료</td>
+          </tr>
+        <tr class="line done l">
+            <th>평생교육이용권</th>
+            <td>이용권 지자체_마이페이지_평생교육이용권 이용 내역</td>
+            <td>page</td>
+            <td><a href="./LIP_300.html">LIP_300.html</a></td>
+            <td class="ac">O</td>
+            <td>01.03 : 1차 퍼블리싱 완료</td>
+          </tr>
+
+        <tr class="line done l">
+          <th>평생교육이용권</th>
           <td>이용권 지자체_마이페이지_개인정보 수정</td>
           <td>page</td>
           <td><a href="./LIP_001.html">LIP_001.html</a></td>
           <td class="ac">O</td>
           <td>12.11 : 시연용 대체 이미지 퍼블리싱</td>
+        </tr>
+        <tr class="line done l">
+          <th>평생교육이용권</th>
+          <td>이용권 지자체_</td>
         </tr>
       </tbody>
     </table>
